--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -34,80 +34,19 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test_engine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_test_engine.cpp">
+    <ClCompile Include="GeneratedFiles\Debug\moc_test_firstclass.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_test_engine.cpp">
+    <ClCompile Include="GeneratedFiles\Release\moc_test_firstclass.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="test_parser.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_test_parser.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_test_parser.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="test_convertertoqwidget.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_test_convertertoqwidget.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_test_convertertoqwidget.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="test_convertertopdf.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_test_convertertopdf.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_test_convertertopdf.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_test_convertertohtml.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_test_convertertohtml.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="test_convertertohtml.cpp">
+    <ClCompile Include="test_firstclass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="test_engine.hpp">
+    <CustomBuild Include="test_firstclass.hpp">
       <Filter>Header Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="test_parser.hpp">
-      <Filter>Header Files</Filter>
-    </CustomBuild>
-    <CustomBuild Include="test_convertertoqwidget.hpp">
-      <Filter>Header Files</Filter>
-    </CustomBuild>
-    <CustomBuild Include="test_convertertopdf.hpp">
-      <Filter>Header Files</Filter>
-    </CustomBuild>
-    <CustomBuild Include="test_convertertohtml.hpp">
-      <Filter>Header Files</Filter>
-    </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="qtreportslib_tests.pro" />
-    <None Include="simple.qreport" />
-    <None Include="detail.qreport" />
-    <None Include="report test.qreport" />
-    <None Include="text test.qreport" />
-    <None Include="default.qreport" />
-    <None Include="students.qreport" />
-    <None Include="style test.qreport" />
-    <None Include="images.qrxml" />
-    <None Include="full.qrxml" />
-    <None Include="errored.qrxml" />
   </ItemGroup>
 </Project>
