--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,20 @@
+# Ubuntu 14.04 Trusty support
+sudo: required
+dist: trusty
+
 language: cpp
+
+addons:
+  apt:
+    sources:
+    # add PPAs with more up-to-date toolchains
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-trusty
+    packages:
+    # install toolchains
+    - gcc-5
+    - g++-5
+    - clang-3.6
 
 os:
   - linux
